# deepin-log-viewer

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  dde_log_viewer.pro  deepin-log-viewer.supp  deepin_log_viewer.pro
.reuse/: dep5
.tx/: config  transifex.yaml  ts2desktop
application/: CMakeLists.txt  DebugTimeManager.cpp  DebugTimeManager.h  aaaa.cpp  aaaa.h  accessible.h  accessibledefine.h  application.pro  basesharedmemorymanager.cpp  basesharedmemorymanager.h  cliapplicationhelper.cpp  com.deepin.pkexec.logViewerAuth.policy.tmp  cppcheckout.txt  dbusmanager.cpp  dbusmanager.h  deepin-log-viewer.desktop  displaycontent.cpp  displaycontent.h  eventlogutils.cpp  exportprogressdlg.cpp  exportprogressdlg.h  filtercontent.cpp  filtercontent.h  journalappwork.cpp  journalappwork.h  journalbootwork.cpp  journalbootwork.h  journalwork.cpp  journalwork.h  logabstractfactory.cpp  logabstractfactory.h  logallexportthread.cpp  logallexportthread.h  logapplication.cpp  logapplication.h  logapplicationhelper.cpp  logapplicationhelper.h  logapplicationparsethread.cpp  logapplicationparsethread.h  logauththread.cpp  (+61 more)
application/assets/: auditRule.conf  com.deepin.pkexec.logViewerAuth.policy  com.deepin.pkexec.logViewerAuth.policy.tmp  com.deepin.pkexec.logViewerTruncate.policy  com.deepin.pkexec.logViewerTruncate.policy.tmp  deepin-log-viewer.desktop  deepin-log-viewer.desktop.tmp  deepin-log-viewer.json  deepin-logger  resources.qrc
application/assets/deepin-log-viewer/log-viewer/: 版本间的差异.txt
application/assets/deepin-log-viewer/log-viewer/en_US/: d_log-viewer.md  eu_log-viewer.md  log-viewer.md  p_log-viewer.md
application/assets/deepin-log-viewer/log-viewer/zh_CN/: eu_log-viewer.md  log-viewer.md  p_log-viewer.md
application/assets/deepin-log-viewer/log-viewer/zh_HK/: eu_log-viewer.md  log-viewer.md  p_log-viewer.md
application/assets/deepin-log-viewer/log-viewer/zh_TW/: eu_log-viewer.md  log-viewer.md  p_log-viewer.md
application/common/: collator.cpp  collator.h
application/configs/: coredump-reporter.service  coredump-reporter.timer  org.deepin.deepin-log-viewer.json
application/configs/dconfig/: org.deepin.log.viewer.json
application/configs/debugconfig/: org.deepin.log.viewer.json
application/configs/json/: org_deepin_log_viewer.hpp
application/dbusproxy/: dldbushandler.cpp  dldbushandler.h  dldbusinterface.cpp  dldbusinterface.h
application/fileloader/: logdatacontrol.cpp  logdatacontrol.h  logfileloader.cpp  logfileloader.h  xorgfileloader.cpp  xorgfileloader.h
application/gschema/: com.deepin.log-viewer.gschema.xml  com.deepin.log.viewer.gschema.xml
application/memorypool/: memorypool.cpp  memorypool.h
application/model/: log_sort_filter_proxy_model.cpp  log_sort_filter_proxy_model.h  logbasemodel.cpp  logbasemodel.h  logtreebasemodel.cpp  logtreebasemodel.h
application/parsethread/: parsethreadbase.cpp  parsethreadbase.h  parsethreadkern.cpp  parsethreadkwin.cpp
application/thread/: basedatafilter.cpp  basedatafilter.h
debian/: changelog  control  control.1  copyright  deepin-log-viewer.1  deepin-log-viewer.install  deepin-log-viewer.postinst  liblogviewerplugin-dev.install  liblogviewerplugin.install  logViewerAuth.1  logViewerTruncate.1  manpages  postinst  rules
liblogviewerplugin/: CMakeLists.txt  liblogviewerplugin.pc.in
liblogviewerplugin/src/: structdef.h
liblogviewerplugin/src/plugininterfaces/: logviewerplugininterface.h
liblogviewerplugin/src/plugins/: logviewerplugin.cpp  logviewerplugin.h
liblogviewerplugin/src/private/: exportprogressdlg.cpp  journalbootwork.h  journalwork.cpp  journalwork.h  logapplicationparsethread.h  logauththread.cpp  logauththread.h  logfileparser.cpp  sharedmemorymanager.h  wtmpparse.cpp  wtmpparse.h
liblogviewerplugin/src/private/dbusproxy/: dldbushandler.cpp  dldbusinterface.cpp  dldbusinterface.h
logViewerAuth/: CMakeLists.txt  authsharedmemorymanager.cpp  authsharedmemorymanager.h  logViewerAuth  logViewerAuth.pro  main.cpp  viewapplication.cpp  viewapplication.h
logViewerService/: CMakeLists.txt  logviewerservice.cpp  logviewerservice.h  logviewerwatcher.cpp  logviewerwatcher.h  main.cpp  opslogexport.cpp  opslogexport.h
logViewerService/assets/data/: com.deepin.logviewer.conf  com.deepin.logviewer.service  com.deepin.logviewer.xml  deepin-log-viewer-daemon.service
logViewerService/configs/dbus/: LogViewerAdaptor.cpp  LogViewerAdaptor.h
logViewerTruncate/: CMakeLists.txt  main.cpp
opsLogViewerService/: CMakeLists.txt  deepin-log-viewer-ops.service  logexportinterface.cpp  logexportinterface.h  main.cpp  opslogexport.cpp  opslogexport.h  org.deepin.logviewer.ops.conf  org.deepin.logviewer.ops.service
rpm/: _service_obs_scm_deepin-log-viewer.spec  deepin-log-viewer.spec
src/: com.deepin.pkexec.dde-log-viewer.policy  dde_log_viewer.pro  (+52 more)
tests/: CMakeLists.txt  cmake-lcov-test.sh  main.cpp  test-prj-running.sh
tests/common/: ut_collator.cpp
tests/dbusproxy/: dldbushandler_ut.cpp  dldbusinterface_ut.cpp  ut_dldbushandler.cpp  ut_dldbusinterface.cpp
tests/src/: dbusmanager_test.cpp  debugtimemanager_test.cpp  displaycontent_test.cpp  displaycontent_test.h  exportprogressdlg_test.cpp  filtercontent_test.cpp  journalbootwork_test.cpp  journalwork_test.cpp  logapplication_test.cpp  logapplicationhelper_test.cpp  logapplicationparsethread_test.cpp  logauththread_test.cpp  logcollectormain_test.cpp  logcombox_test.cpp  logdetailedit_test.cpp  logdetailinfowidget_test.cpp  logexportthread_test.cpp  logfileparser_test.cpp  logiconbutton_test.cpp  loglistview_test.cpp  lognormalbutton_test.cpp  logperiodbutton_test.cpp  logscrollbar_test.cpp  logsettings_test.cpp  logspinnerwidget_test.cpp  logtreeview_test.cpp  logviewheaderview_test.cpp  logviewitemdelegate_test.cpp  sharedmemorymanager_test.cpp  stub.h  stuballthread.cpp  stuballthread.h  test_main.cpp  ut_dbusmanager.cpp  ut_debugtimemanager.cpp  ut_displaycontent.cpp  ut_exportprogressdlg.cpp  ut_filtercontent.cpp  ut_journalbootwork.cpp  ut_journalwork.cpp  (+25 more)
tests/ut_logviewerplugin/: ut_logViewerPlugin.cpp
(+466 files in other folders)
